added component drags and sets new postion, added uuid to component

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sass-loader": "^4.0.0",
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.0",
+    "uuid-js": "^0.7.5",
     "webpack": "^1.12.13",
     "webpack-error-notification": "^0.1.6",
     "webpack-notifier": "^1.4.1",
