--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "karma start",
     "start": "node server.js",
-    "postinstall": "webpack -p --config ./webpack.config.js --progress"
+    "postinstall": "webpack -p --config ./webpack.config.js --env production"
   },
   "engines": {
     "node": "6.9.1"
@@ -28,14 +28,18 @@
     "react-router": "^3.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.5.1",
-    "babel-loader": "^6.2.2",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.9",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-latest": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "babili": "0.0.9",
+    "babili-webpack-plugin": "0.0.7",
     "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.26.0",
     "deep-freeze-strict": "^1.1.1",
     "expect": "^1.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "jquery": "2.2.4",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
@@ -45,15 +49,14 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "mocha": "^3.1.2",
-    "node-sass": "^3.8.0",
+    "node-sass": "^4.5.0",
     "redux": "^3.3.1",
-    "sass-loader": "^4.0.0",
+    "sass-loader": "^5.0.1",
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.0",
     "uuid-js": "^0.7.5",
-    "webpack": "^1.12.13",
+    "webpack": "2.2.1",
     "webpack-error-notification": "^0.1.6",
-    "webpack-notifier": "^1.4.1",
-    "what-input": "^4.0.0"
+    "webpack-notifier": "^1.4.1"
   }
 }
