--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "karma start",
     "start": "node server.js",
-    "postinstall": "webpack -p --config ./webpack.config.js --progress"
+    "postinstall": "webpack -p --config ./webpack.config.js production --progress --env production"
   },
   "engines": {
     "node": "6.9.1"
@@ -30,7 +30,7 @@
   "devDependencies": {
     "babel-core": "^6.16.0",
     "babel-loader": "^6.2.7",
-    "babel-preset-es2015": "^6.18.0", 
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.22.0",
     "babel-plugin-transform-class-properties": "6.22.0",
     "babel-plugin-transform-runtime": "6.15.0",
