--- a/package.json
+++ b/package.json
@@ -28,35 +28,31 @@
     "react-router": "^3.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.9",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
+    "babel-core": "^6.5.1",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
     "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.26.0",
     "deep-freeze-strict": "^1.1.1",
     "expect": "^1.14.0",
-    "extract-text-webpack-plugin": "^1.0.1",
     "jquery": "2.2.4",
-    "karma": "^1.5.0",
-    "karma-babel-preprocessor": "^6.0.1",
+    "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.2",
+    "karma-mocha-reporter": "^2.0.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.2",
-    "mocha": "^3.2.0",
-    "node-sass": "^4.5.0",
-    "redux": "^3.3.1", 
-    "sass-loader": "^5.0.1",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^3.1.2",
+    "node-sass": "^3.8.0",
+    "redux": "^3.3.1",
+    "sass-loader": "^4.0.0",
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.0",
     "uuid-js": "^0.7.5",
-    "webpack": "2.2.1",
+    "webpack": "^1.12.13",
     "webpack-error-notification": "^0.1.6",
-    "webpack-notifier": "^1.5.0"
+    "webpack-notifier": "^1.4.1"
   }
 }
