--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "karma start",
     "start": "node server.js",
-    "postinstall": "webpack -p --config ./webpack.config.js --env production"
+    "postinstall": "webpack --config ./webpack.config.js --env=production"
   },
   "engines": {
     "node": "6.9.1"
@@ -37,7 +37,7 @@
     "deep-freeze-strict": "^1.1.1",
     "expect": "^1.14.0",
     "jquery": "2.2.4",
-    "karma": "^1.3.0", 
+    "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
