--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-addons-test-utils": "^15.0.0",
     "react-dom": "^15.4.0",
     "react-ga": "^2.1.2",
+    "react-joyride": "^1.10.1",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0"
   },
